--- a/src/index.html
+++ b/src/index.html
@@ -94,14 +94,14 @@
       <button class="slider__images--btn btn--left slider__btn--left">
         <svg class="slider__images--icon">
           <use
-            xlink:href="img/icon-btns/symbol-defs.svg#icon-arrow-left2"
+            xlink:href="../static/icon-btns/symbol-defs.svg#icon-arrow-left2"
           ></use>
         </svg>
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
         <svg class="slider__images--icon">
           <use
-            xlink:href="img/icon-btns/symbol-defs.svg#icon-arrow-right2"
+            xlink:href="../static/icon-btns/symbol-defs.svg#icon-arrow-right2"
           ></use>
         </svg>
       </button>
