svg problemas de iconos redes

--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
           >
             <svg class="footer__icons--icon1">
               <use
-                xlink:href="img/icon-btns/symbol-defs.svg#icon-instagram"
+                xlink:href="../static/icon-btns/symbol-defs.svg#icon-instagram"
               ></use>
             </svg>
           </a>
@@ -246,7 +246,7 @@
           >
             <svg class="footer__icons--icon2">
               <use
-                xlink:href="img/icon-btns/symbol-defs.svg#icon-facebook2"
+                xlink:href="../static/icon-btns/symbol-defs.svg#icon-facebook2"
               ></use>
             </svg>
           </a>
@@ -261,7 +261,7 @@
           >
             <svg class="footer__icons--icon3">
               <use
-                xlink:href="img/icon-btns/symbol-defs.svg#icon-whatsapp"
+                xlink:href="../static/icon-btns/symbol-defs.svg#icon-whatsapp"
               ></use>
             </svg>
           </a>
