--- a/src/index.html
+++ b/src/index.html
@@ -94,14 +94,14 @@
       <button class="slider__images--btn btn--left slider__btn--left">
         <svg class="slider__images--icon">
           <use
-            xlink:href="../static/icon-btns/symbol-defs.svg#icon-arrow-left2"
+            xlink:href="/static/icon-btns/symbol-defs.svg#icon-arrow-left2"
           ></use>
         </svg>
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
         <svg class="slider__images--icon">
           <use
-            xlink:href="../static/icon-btns/symbol-defs.svg#icon-arrow-right2"
+            xlink:href="/static/icon-btns/symbol-defs.svg#icon-arrow-right2"
           ></use>
         </svg>
       </button>
@@ -231,7 +231,7 @@
           >
             <svg class="footer__icons--icon1">
               <use
-                xlink:href="../static/icon-btns/symbol-defs.svg#icon-instagram"
+                xlink:href="/static/icon-btns/symbol-defs.svg#icon-instagram"
               ></use>
             </svg>
           </a>
@@ -246,7 +246,7 @@
           >
             <svg class="footer__icons--icon2">
               <use
-                xlink:href="../static/icon-btns/symbol-defs.svg#icon-facebook2"
+                xlink:href="/static/icon-btns/symbol-defs.svg#icon-facebook2"
               ></use>
             </svg>
           </a>
@@ -261,7 +261,7 @@
           >
             <svg class="footer__icons--icon3">
               <use
-                xlink:href="../static/icon-btns/symbol-defs.svg#icon-whatsapp"
+                xlink:href="/static/icon-btns/symbol-defs.svg#icon-whatsapp"
               ></use>
             </svg>
           </a>
