--- a/src/index.html
+++ b/src/index.html
@@ -93,16 +93,12 @@
       <div class="slider__images"></div>
       <button class="slider__images--btn btn--left slider__btn--left">
         <svg class="slider__images--icon">
-          <use
-            xlink:href="/static/icon-btns/symbol-defs.svg#icon-arrow-left2"
-          ></use>
+          <use xlink:href="/icon-btns/symbol-defs.svg#icon-arrow-left2"></use>
         </svg>
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
         <svg class="slider__images--icon">
-          <use
-            xlink:href="/static/icon-btns/symbol-defs.svg#icon-arrow-right2"
-          ></use>
+          <use xlink:href="/icon-btns/symbol-defs.svg#icon-arrow-right2"></use>
         </svg>
       </button>
     </section>
