nueva ruta iconos

--- a/src/index.html
+++ b/src/index.html
@@ -93,12 +93,12 @@
       <div class="slider__images"></div>
       <button class="slider__images--btn btn--left slider__btn--left">
         <svg class="slider__images--icon">
-          <use xlink:href="/icon-btns/symbol-defs.svg#icon-arrow-left2"></use>
+          <use xlink:href="./img/icon.svg#icon-arrow-left2"></use>
         </svg>
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
         <svg class="slider__images--icon">
-          <use xlink:href="/icon-btns/symbol-defs.svg#icon-arrow-right2"></use>
+          <use xlink:href="./img/icon.svg#icon-arrow-right2"></use>
         </svg>
       </button>
     </section>
@@ -226,9 +226,7 @@
             aria-label="Instagram"
           >
             <svg class="footer__icons--icon1">
-              <use
-                xlink:href="/static/icon-btns/symbol-defs.svg#icon-instagram"
-              ></use>
+              <use xlink:href="./img/icon.svg#icon-instagram"></use>
             </svg>
           </a>
         </div>
@@ -241,9 +239,7 @@
             aria-label="Facebook"
           >
             <svg class="footer__icons--icon2">
-              <use
-                xlink:href="/static/icon-btns/symbol-defs.svg#icon-facebook2"
-              ></use>
+              <use xlink:href="./img/icon.svg#icon-facebook2"></use>
             </svg>
           </a>
         </div>
@@ -256,9 +252,7 @@
             aria-label="WhatsApp"
           >
             <svg class="footer__icons--icon3">
-              <use
-                xlink:href="/static/icon-btns/symbol-defs.svg#icon-whatsapp"
-              ></use>
+              <use xlink:href="./img/icon.svg#icon-whatsapp"></use>
             </svg>
           </a>
         </div>
