--- a/src/index.html
+++ b/src/index.html
@@ -93,12 +93,12 @@
       <div class="slider__images"></div>
       <button class="slider__images--btn btn--left slider__btn--left">
         <svg class="slider__images--icon">
-          <use xlink:href="/img/icon.svg#icon-arrow-left2"></use>
+          <use xlink:href="./img/icon.svg#icon-arrow-left2"></use>
         </svg>
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
         <svg class="slider__images--icon">
-          <use xlink:href="/img/icon.svg#icon-arrow-right2"></use>
+          <use xlink:href="./img/icon.svg#icon-arrow-right2"></use>
         </svg>
       </button>
     </section>
@@ -225,8 +225,18 @@
             rel="noopener noreferrer"
             aria-label="Instagram"
           >
-            <svg class="footer__icons--icon1">
-              <use xlink:href="/img/icon.svg#icon-instagram"></use>
+            <svg
+              class="footer__icons--icon1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              aria-hidden="true"
+              width="24"
+              height="24"
+            >
+              <path
+                d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 8.333a3.333 3.333 0 1 0 0-6.666 3.333 3.333 0 0 0 0 6.666zm4.667-9.333a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+              />
             </svg>
           </a>
         </div>
@@ -239,7 +249,7 @@
             aria-label="Facebook"
           >
             <svg class="footer__icons--icon2">
-              <use xlink:href="/img/icon.svg#icon-facebook2"></use>
+              <use xlink:href="./img/icon.svg#icon-facebook2"></use>
             </svg>
           </a>
         </div>
@@ -252,7 +262,7 @@
             aria-label="WhatsApp"
           >
             <svg class="footer__icons--icon3">
-              <use xlink:href="/img/icon.svg#icon-whatsapp"></use>
+              <use xlink:href="./img/icon.svg#icon-whatsapp"></use>
             </svg>
           </a>
         </div>
