--- a/src/index.html
+++ b/src/index.html
@@ -93,12 +93,16 @@
       <div class="slider__images"></div>
       <button class="slider__images--btn btn--left slider__btn--left">
         <svg class="slider__images--icon">
-          <use xlink:href="./img/icon.svg#icon-arrow-left2"></use>
+          <path
+            d="M19.414 27.414l10-10c0.781-0.781 0.781-2.047 0-2.828l-10-10c-0.781-0.781-2.047-0.781-2.828 0s-0.781 2.047 0 2.828l6.586 6.586h-19.172c-1.105 0-2 0.895-2 2s0.895 2 2 2h19.172l-6.586 6.586c-0.39 0.39-0.586 0.902-0.586 1.414s0.195 1.024 0.586 1.414c0.781 0.781 2.047 0.781 2.828 0z"
+          ></path>
         </svg>
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
         <svg class="slider__images--icon">
-          <use xlink:href="./img/icon.svg#icon-arrow-right2"></use>
+          <path
+            d="M12.586 27.414l-10-10c-0.781-0.781-0.781-2.047 0-2.828l10-10c0.781-0.781 2.047-0.781 2.828 0s0.781 2.047 0 2.828l-6.586 6.586h19.172c1.105 0 2 0.895 2 2s-0.895 2-2 2h-19.172l6.586 6.586c0.39 0.39 0.586 0.902 0.586 1.414s-0.195 1.024-0.586 1.414c-0.781 0.781-2.047 0.781-2.828 0z"
+          ></path>
         </svg>
       </button>
     </section>
