svgs agregados directamente en archivos separados svg y luego en html se agregaron como img

--- a/src/index.html
+++ b/src/index.html
@@ -92,14 +92,10 @@
       </div>
       <div class="slider__images"></div>
       <button class="slider__images--btn btn--left slider__btn--left">
-        <svg class="slider__images--icon">
-          <use xlink:href="img/icon.svg#icon-arrow-left2">
-        </svg>
+        <img src="./img/icon/icon-arrow-left2.svg" alt="Facebook icon" />
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
-        <svg class="slider__images--icon">
-          <use xlink:href="img/icon.svg#icon-arrow-right2">
-        </svg>
+        <img src="./img/icon/icon-arrow-right2.svg" alt="Facebook icon" />
       </button>
     </section>
     <section class="section eventos" id="eventos">
@@ -225,9 +221,7 @@
             rel="noopener noreferrer"
             aria-label="Instagram"
           >
-            <svg class="footer__icons--icon1">
-               <use xlink:href="img/icon.svg#icon-instagram">
-            </svg>
+            <img src="./img/icon/icon-instagram.svg" alt="Facebook icon" />
           </a>
         </div>
 
@@ -238,9 +232,7 @@
             rel="noopener noreferrer"
             aria-label="Facebook"
           >
-            <svg class="footer__icons--icon2">
-              <use xlink:href="img/icon.svg#icon-facebook2">
-            </svg>
+            <img src="./img/icon/icon-facebook2.svg" alt="Facebook icon" />
           </a>
         </div>
 
@@ -251,9 +243,7 @@
             rel="noopener noreferrer"
             aria-label="WhatsApp"
           >
-            <svg class="footer__icons--icon3">
-             <use xlink:href="img/icon.svg#icon-whatsapp">
-            </svg>
+            <img src="./img/icon/icon-whatsapp.svg" alt="Facebook icon" />
           </a>
         </div>
       </div>
