meda query para pantallas

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,10 @@
     </section>
     <section class="section eventos" id="eventos">
       <div class="eventos__images"></div>
-      <div class="eventos__text event-text-container">
+      <div
+        class="eventos__text event-text-container"
+        id="slides-event-animation"
+      >
         <h2 class="eventos__text__heading">
           &iexcl;Para todo tipo de ocasiones&excl;
         </h2>
