imagenes resie para mejor rendimiento

--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,15 @@
       </div>
       <figure class="nav__logo">
         <img
-          src="img/logo/logo-bg-off.avif"
+          src="img/logo/logo-bg-off-300.avif"
           alt="Logo Felipe"
           id="logo"
           loading="lazy"
+          srcset="
+            img/logo/logo-bg-off-150.avif 150w,
+            img/logo/logo-bg-off-300.avif 300w
+          "
+          sizes="(max-width: 600px) 150px, 300px"
         />
       </figure>
       <ul class="dropdown-menu" id="dropdown">
@@ -179,51 +184,97 @@
       </figure>
       <figure class="gallery__item gallery__item--2">
         <img
-          src="img/grid/grid2.avif"
+          src="img/grid/grid2-600.avif"
           alt="Gallery image 2"
           class="gallery__img"
+          loading="lazy"
+          srcset="
+            img/grid/grid2-300.avif   300w,
+            img/grid/grid2-600.avif   600w,
+            img/grid/grid2-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
       <figure class="gallery__item gallery__item--3">
         <img
-          src="img/grid/grid3.avif"
+          src="img/grid/grid3-600.avif"
           alt="Gallery image 3"
           class="gallery__img"
+          loading="lazy"
+          srcset="
+            img/grid/grid3-300.avif   300w,
+            img/grid/grid3-600.avif   600w,
+            img/grid/grid3-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
       <figure class="gallery__item gallery__item--4">
         <img
-          src="img/grid/grid4.avif"
+          src="img/grid/grid4-600.avif"
           alt="Gallery image 4"
           class="gallery__img"
+          loading="lazy"
+          srcset="
+            img/grid/grid4-300.avif   300w,
+            img/grid/grid4-600.avif   600w,
+            img/grid/grid4-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
       <figure class="gallery__item gallery__item--5">
         <img
-          src="img/grid/grid5.avif"
+          src="img/grid/grid5-600.avif"
           alt="Gallery image 5"
           class="gallery__img"
+          loading="lazy"
+          srcset="
+            img/grid/grid5-300.avif   300w,
+            img/grid/grid5-600.avif   600w,
+            img/grid/grid5-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
       <figure class="gallery__item gallery__item--6">
         <img
-          src="../static/ext/ext3.avif"
+          src="../static/ext/ext3-600.avif"
           alt="Gallery image 6"
           class="gallery__img"
+          srcset="
+            ../static/ext/ext3-300.avif   300w,
+            ../static/ext/ext3-600.avif   600w,
+            ../static/ext/ext3-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
       <figure class="gallery__item gallery__item--7">
         <img
-          src="../static/ext/ext5.avif"
+          src="../static/ext/ext5-600.avif"
           alt="Gallery image 7"
           class="gallery__img"
+          srcset="
+            ../static/ext/ext5-300.avif   300w,
+            ../static/ext/ext5-600.avif   600w,
+            ../static/ext/ext5-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
       <figure class="gallery__item gallery__item--8">
         <img
-          src="../static/eventos/event2.avif"
+          src="../static/eventos/event2-600.avif"
           alt="Gallery image 8"
           class="gallery__img"
+          srcset="
+            ../static/eventos/event2-300.avif   300w,
+            ../static/eventos/event2-600.avif   600w,
+            ../static/eventos/event2-1200.avif 1200w
+          "
+          sizes="(max-width: 600px) 300px, (max-width: 1024px) 600px, 1200px"
         />
       </figure>
     </section>
