alt de imagenes correcto para cada uno

--- a/src/index.html
+++ b/src/index.html
@@ -105,10 +105,10 @@
       </div>
       <div class="slider__images"></div>
       <button class="slider__images--btn btn--left slider__btn--left">
-        <img src="./img/icon/icon-arrow-left2.svg" alt="Facebook icon" />
+        <img src="./img/icon/icon-arrow-left2.svg" alt="Arrow Left icon" />
       </button>
       <button class="slider__images--btn btn--right slider__btn--right">
-        <img src="./img/icon/icon-arrow-right2.svg" alt="Facebook icon" />
+        <img src="./img/icon/icon-arrow-right2.svg" alt="Arrow Right icon" />
       </button>
     </section>
     <section class="section eventos" id="eventos">
@@ -290,7 +290,7 @@
             rel="noopener noreferrer"
             aria-label="Instagram"
           >
-            <img src="./img/icon/icon-instagram.svg" alt="Facebook icon" />
+            <img src="./img/icon/icon-instagram.svg" alt="Instagram icon" />
           </a>
         </div>
 
@@ -312,7 +312,7 @@
             rel="noopener noreferrer"
             aria-label="WhatsApp"
           >
-            <img src="./img/icon/icon-whatsapp.svg" alt="Facebook icon" />
+            <img src="./img/icon/icon-whatsapp.svg" alt="WhatsApp icon" />
           </a>
         </div>
       </div>
