--- a/src/index.html
+++ b/src/index.html
@@ -56,18 +56,18 @@
         <li class="nav__li"><a href="#sesiones" class="nav__a">Sesiones</a></li>
         <li class="nav__li"><a href="#eventos" class="nav__a">Eventos</a></li>
         <li class="nav__li">
-          <a href="#about-me" class="nav__a">Quien soy</a>
+          <a href="#about-me" class="nav__a">Quién soy</a>
         </li>
-        <li class="nav__li"><a href="#galeria" class="nav__a">Galeria</a></li>
+        <li class="nav__li"><a href="#galeria" class="nav__a">Galería</a></li>
         <li class="nav__li"><a href="#contacto" class="nav__a">Contacto</a></li>
       </ul>
       <ul class="nav__ul">
         <li class="nav__li"><a href="#sesiones" class="nav__a">Sesiones</a></li>
         <li class="nav__li"><a href="#eventos" class="nav__a">Eventos</a></li>
         <li class="nav__li">
-          <a href="#about-me" class="nav__a">Quien soy</a>
+          <a href="#about-me" class="nav__a">Quién soy</a>
         </li>
-        <li class="nav__li"><a href="#galeria" class="nav__a">Galeria</a></li>
+        <li class="nav__li"><a href="#galeria" class="nav__a">Galería</a></li>
         <li class="nav__li"><a href="#contacto" class="nav__a">Contacto</a></li>
       </ul>
     </nav>
@@ -123,7 +123,7 @@
         <ul class="eventos__text__ul">
           <li class="eventos__text__ul--li">Deportes</li>
           <li class="eventos__text__ul--li">Navidad</li>
-          <li class="eventos__text__ul--li">San Valentin</li>
+          <li class="eventos__text__ul--li">San Valentín</li>
           <li class="eventos__text__ul--li">Negocios</li>
           <li class="eventos__text__ul--li">Parejas</li>
           <li class="eventos__text__ul--li">Mascotas</li>
@@ -280,7 +280,7 @@
     </section>
     <footer class="section footer" id="contacto">
       <h3 class="footer__heading">
-        &iexcl;Contactame en mis redes sociales&excl;
+        &iexcl;Buscame en mis redes sociales&excl;
       </h3>
       <div class="footer__icons">
         <div class="footer__icons--icon">
